--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ main {
 }
 
 .btn {
-  margin: 0%;
+  margin: auto;
   display: block;
   cursor: pointer;
   padding: 0.8em 1.4em;
@@ -153,7 +153,6 @@ main {
   .section {
     margin-top: 4em;
   }
-var(--clr-primary);
 }
 
 .btn--icon:active {
